--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "capture-website": "^2.3.0",
     "filenamify-url": "^3.0.0",
     "node-fetch": "^3.2.4",
-    "ogp-parser": "^0.6.0"
-  },
-  "devDependencies": {
+    "unfurl.js": "^5.6.4",
     "@minify-html/js": "^0.8.0",
     "prettier": "^2.6.2",
     "sharp": "^0.30.4"
