--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "scripts": {
-    "start": "node index.mjs",
+    "start": "npm run build && npm run serve",
+    "serve": "npx http-server ./data",
+    "build": "node index.mjs",
     "fix": "npx prettier . --write",
-    "deploy": "npm run fix && npm start && git add . && git commit -a -m 'New release' && git push"
+    "deploy": "npm run fix && npm run build && git add . && git commit -a -m 'New release' && git push"
   },
   "dependencies": {
+    "@minify-html/js": "^0.8.0",
     "capture-website": "^2.3.0",
     "filenamify-url": "^3.0.0",
     "node-fetch": "^3.2.4",
-    "unfurl.js": "^5.6.4",
-    "@minify-html/js": "^0.8.0",
     "prettier": "^2.6.2",
-    "sharp": "^0.30.4"
+    "sharp": "^0.30.4",
+    "unfurl.js": "^5.6.4"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.0"
   }
 }
